--- a/task-a/style.css
+++ b/task-a/style.css
@@ -1,5 +1,9 @@
-< !-- Author: Wanjia Liang Date: 2025-09-08 -->body {
-    background-color: lightblue;
+/*
+Author: Wanjia Liang
+Date: 2025-09-08
+*/
+body {
+    background-color: rgb(161, 23, 138);
 }
 
 h1 {
