--- a/task-a/style.css
+++ b/task-a/style.css
@@ -7,10 +7,10 @@ body {
 }
 
 h1 {
-    color: rgb(90, 75, 75);
+    color: rgb(75, 64, 64);
     font-size: 24px;
 }
 
 p {
-    color: rgb(23, 10, 209);
+    color: #e38a31;
 }
