--- a/task-a/style.css
+++ b/task-a/style.css
@@ -3,14 +3,14 @@ Author: Wanjia Liang
 Date: 2025-09-08
 */
 body {
-    background-color: rgb(219, 192, 214);
+    background-color: rgb(219, 203, 216);
 }
 
 h1 {
-    color: rgb(75, 64, 64);
+    color: rgb(48, 42, 42);
     font-size: 24px;
 }
 
 p {
-    color: #e38a31;
+    color: #ef8b28;
 }
