--- a/task-a/style.css
+++ b/task-a/style.css
@@ -7,10 +7,10 @@ body {
 }
 
 h1 {
-    color: rgb(48, 42, 42);
-    font-size: 24px;
+    color: rgb(23, 20, 20);
+    font-size: 36px;
 }
 
 p {
-    color: #ef8b28;
+    color: #f17c07;
 }
