--- a/task-a/style.css
+++ b/task-a/style.css
@@ -2,8 +2,8 @@
 Author: Wanjia Liang
 Date: 2025-09-08
 */
-backgroud {
-    color: rgb(59, 54, 54);
+body {
+    background-color: rgb(59, 54, 54);
 }
 
 h1 {
