--- a/task-b/style.css
+++ b/task-b/style.css
@@ -3,34 +3,47 @@ Author: Wanjia Liang
 Date: 2025-09-25
 */
 body {
-    background-color: rgb(190, 8, 145);
+    background-color: rgb(233, 170, 217);
+    font-family: Arial, sans-serif;
 }
 
 h1 {
-    color: rgb(205, 209, 205);
+    color: rgb(249, 19, 34);
     font-size: 36px;
+    font-weight: bold;
 }
 
 h2 {
-    color: rgb(14, 231, 46);
+    color: rgb(2, 135, 104);
     font-size: 24px;
+    font-weight: bold;
 }
 
 p {
-    color: black;
+    color: rgb(62, 61, 61);
+    font-weight: bold;
 }
 
 a {
-    color: rgb(255, 0, 0);
+    color: rgb(241, 116, 116);
     font-style: italic;
+    text-decoration: underline;
 }
 
-li {
-    color: rgb(0, 0, 255);
+ul li {
+    color: rgb(93, 93, 243);
     list-style-type: square;
+    text-indent: 0px;
+
 }
 
-ol {
-    color: bisque;
+ul {
+    text-indent: -20px;
+    padding-left: 20px
+}
+
+ol li {
+    color: rgb(240, 234, 227);
     list-style-type: decimal;
+
 }
