--- a/task-e/style.css
+++ b/task-e/style.css
@@ -152,7 +152,7 @@ body {
 
 .table thead th:nth-child(n+2),
 .table tbody td:nth-child(n+2) {
-    width: 15%;
+    width: auto;
 }
 
 /* Center the day columns (Monâ€“Thu) */
