--- a/task-k/Cataloguestyles.css
+++ b/task-k/Cataloguestyles.css
@@ -193,4 +193,14 @@ footer p {
         align-items: center;
     }
 
+    .introduction {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .introduction iframe {
+        width: 100%;
+        height: 350px;
+    }
+
 }
